force-app/main/default/objects/bpats__Offer__c/fields/bpats__Candidate__c.field-meta.xml
<CustomField>
    <fullName>bpats__Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>