force-app/main/default/objects/bpats__Offer__c/fields/bpats__Job__c.field-meta.xml
<CustomField>
    <fullName>bpats__Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>bpats__Job__c</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>