force-app/main/default/objects/bpats__Offer__c/fields/bpats__Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>bpats__Offer_Status__c</fullName>
    <label>Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>