force-app/main/default/objects/bpats__Offer__c/fields/bpats__Rate_Offered__c.field-meta.xml
<CustomField>
    <fullName>bpats__Rate_Offered__c</fullName>
    <label>Rate Offered</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>