force-app/main/default/objects/bpats__Offer__c/fields/bpats__Salary_Offered__c.field-meta.xml
<CustomField>
    <fullName>bpats__Salary_Offered__c</fullName>
    <label>Salary Offered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>