force-app/main/default/objects/bpats__Offer__c/listViews/bpats__All.listView-meta.xml
<ListView>
    <fullName>bpats__All</fullName>
    <columns>NAME</columns>
    <columns>bpats__Candidate__c</columns>
    <columns>bpats__Job__c</columns>
    <columns>bpats__Offer_Status__c</columns>
    <columns>bpats__Rate_Offered__c</columns>
    <columns>bpats__Salary_Offered__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>